largura, altura e flexbox

--- a/src/index.html
+++ b/src/index.html
@@ -97,5 +97,122 @@
         tenetur earum natus nulla eos.
       </div>
     </div>
+
+    <div>
+      <h1 class="text-xl tracking-widest text-center">
+        Aula 05 - Largura e altura
+      </h1>
+      <div
+        class="w-60 m-5 p-4 bg-gradient-to-br from-yellow-400 via-red-500 to-pink-500 text-white"
+      >
+        Tamanho w-60 Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        Aliquid voluptas obcaecati recusandae iure itaque doloribus repellendus,
+        explicabo odio? Corporis facere quam eius ipsam voluptate dolorem
+        tenetur earum natus nulla eos.
+      </div>
+      <div
+        class="w-1/2 m-5 p-4 bg-gradient-to-br from-yellow-400 via-red-500 to-pink-500 text-white"
+      >
+        Tamanho 1/2 (responsivo) Lorem ipsum dolor sit amet consectetur
+        adipisicing elit. Aliquid voluptas obcaecati recusandae iure itaque
+        doloribus repellendus, explicabo odio? Corporis facere quam eius ipsam
+        voluptate dolorem tenetur earum natus nulla eos.
+      </div>
+      <div
+        class="w-screen h-40 bg-gradient-to-br from-yellow-400 via-red-500 to-pink-500 text-white"
+      >
+        Tamanho w-screen h-40 (responsivo) Lorem ipsum dolor sit amet
+        consectetur adipisicing elit. Aliquid voluptas obcaecati recusandae iure
+        itaque doloribus repellendus, explicabo odio? Corporis facere quam eius
+        ipsam voluptate dolorem tenetur earum natus nulla eos.
+      </div>
+    </div>
+
+    <div>
+      <h1 class="text-xl tracking-widest text-center">Aula 05 - Flexbox</h1>
+    </div>
+    <div class="flex justify-center items-center space-x-4 bg-gray-300 h-36">
+      <div
+        class="w-24 h-24 p-4 bg-gradient-to-br from-yellow-400 via-red-500 to-pink-500 text-white"
+      ></div>
+      <div
+        class="w-24 h-24 p-4 bg-gradient-to-br from-yellow-400 via-red-500 to-pink-500 text-white"
+      ></div>
+      <div
+        class="w-24 h-24 p-4 bg-gradient-to-br from-yellow-400 via-red-500 to-pink-500 text-white"
+      ></div>
+    </div>
+
+    <div class="flex justify-center items-center space-x-4 bg-gray-300 h-36">
+      <div
+        class="w-24 h-24 p-4 bg-gradient-to-br from-yellow-400 via-red-500 to-pink-500 text-white"
+      ></div>
+      <div
+        class="flex-grow flex-shrink-0 w-24 h-24 p-4 bg-gradient-to-br from-yellow-400 via-red-500 to-pink-500 text-white"
+      ></div>
+      <div
+        class="w-24 h-24 p-4 bg-gradient-to-br from-yellow-400 via-red-500 to-pink-500 text-white"
+      ></div>
+    </div>
+
+    <div class="flex justify-start items-center space-x-4 bg-gray-300 h-36">
+      <div
+        class="w-24 h-24 p-4 bg-gradient-to-br from-yellow-400 via-red-500 to-pink-500 text-white"
+      ></div>
+      <div
+        class="w-24 h-24 p-4 bg-gradient-to-br from-yellow-400 via-red-500 to-pink-500 text-white"
+      ></div>
+      <div
+        class="w-24 h-24 p-4 bg-gradient-to-br from-yellow-400 via-red-500 to-pink-500 text-white"
+      ></div>
+    </div>
+
+    <div class="flex justify-end items-center space-x-4 bg-gray-300 h-36">
+      <div
+        class="w-24 h-24 p-4 bg-gradient-to-br from-yellow-400 via-red-500 to-pink-500 text-white"
+      ></div>
+      <div
+        class="w-24 h-24 p-4 bg-gradient-to-br from-yellow-400 via-red-500 to-pink-500 text-white"
+      ></div>
+      <div
+        class="w-24 h-24 p-4 bg-gradient-to-br from-yellow-400 via-red-500 to-pink-500 text-white"
+      ></div>
+    </div>
+
+    <div class="flex justify-center items-start space-x-4 bg-gray-300 h-36">
+      <div
+        class="w-24 h-24 p-4 bg-gradient-to-br from-yellow-400 via-red-500 to-pink-500 text-white"
+      ></div>
+      <div
+        class="w-24 h-24 p-4 bg-gradient-to-br from-yellow-400 via-red-500 to-pink-500 text-white"
+      ></div>
+      <div
+        class="w-24 h-24 p-4 bg-gradient-to-br from-yellow-400 via-red-500 to-pink-500 text-white"
+      ></div>
+    </div>
+
+    <div class="flex justify-center items-end space-x-4 bg-gray-300 h-36">
+      <div
+        class="w-24 h-24 p-4 bg-gradient-to-br from-yellow-400 via-red-500 to-pink-500 text-white"
+      ></div>
+      <div
+        class="w-24 h-24 p-4 bg-gradient-to-br from-yellow-400 via-red-500 to-pink-500 text-white"
+      ></div>
+      <div
+        class="w-24 h-24 p-4 bg-gradient-to-br from-yellow-400 via-red-500 to-pink-500 text-white"
+      ></div>
+    </div>
+
+    <div class="flex flex-col space-y-4">
+      <div
+        class="w-24 p-4 bg-gradient-to-br from-yellow-400 via-red-500 to-pink-500 text-white"
+      ></div>
+      <div
+        class="w-24 p-4 bg-gradient-to-br from-yellow-400 via-red-500 to-pink-500 text-white"
+      ></div>
+      <div
+        class="w-24 p-4 bg-gradient-to-br from-yellow-400 via-red-500 to-pink-500 text-white"
+      ></div>
+    </div>
   </body>
 </html>
